# envMeta

./: Dockerfile  README.md  client.py  contracts.py  environment.py  graders.py  inference.py  models.py  openenv.yaml  pyproject.toml  test_environment.py  test_fastapi.py
data/: contracts.json
server/: Dockerfile  __init__.py  app.py
